# datamgmt

./: .gitignore  datamgmt.toml  pyproject.toml  secret.py
src/: admin.py  eod.py  fred.py  gex.py  source.py
src/datamgmt/: __init__.py  admin.py  fred.py  ism  ism.py  source.py
